--- a/configs/sol3.yaml
+++ b/configs/sol3.yaml
@@ -1,9 +1,9 @@
 base:
-  model_name: MyResNet18
+  model_name: MyResNet18_frog
   device: cuda
 
 dataloader:
-  batch_size: 128
+  batch_size: 256
   list_custom_classes_training_phase:
     - airplane
     - automobile
@@ -30,20 +30,21 @@ loss:
   loss_fn_args: {}
 
 learning:
-  max_epoch: 20
+  max_epoch: 200
   #saving_args:
   report_root: ./reports
   ckpt_save_root: ./ckpts
   ckpt_load_path: ~
-  ckpt_save_freq: 10
+  ckpt_save_freq: 5
   #optim_args:
   learning_rate: 0.0001
-  gamma: 0.995
+  gamma: 0.998
 
 eval:
   list_custom_classes_eval_phase:
+    - dog
     - frog
-  path_model_eval: ./ckpts/ckpt_MyResNet18_epoch_20.pt
+  path_model_eval: ./ckpts/ckpt_MyResNet18_frog_epoch_200.pt
   threshold: 0.95
   is_ood: True
   batch_size: 128
